...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Text to reverse" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NVJ-FX-9IQ">
                                <rect key="frame" x="20" y="279.66666666666669" width="390" height="22"/>
                                <accessibility key="accessibilityConfiguration" identifier="TextToReverseID"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="WYM-Wn-iXy"/>
                                </connections>
                            </textField>
...
                                    <segment title="Default"/>
                                    <segment title="Custom"/>
                                </segments>
                            </segmentedControl>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AY8-Sc-jtx">
                                <rect key="frame" x="20" y="849" width="390" height="50"/>
                                <accessibility key="accessibilityConfiguration" identifier="ReverseButtonID">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="7Jx-bp-FOV"/>
                                </constraints>
                                <color key="tintColor" systemColor="systemCyanColor"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5HB-B2-Rg6">
                                <rect key="frame" x="20" y="479" width="390" height="0.0"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Fa-lN-ltT">
                                        <accessibility key="accessibilityConfiguration" identifier="ReversedLabel"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                        <color key="textColor" name="AccentColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
                                <constraints>
...
                                </constraints>
                                <viewLayoutGuide key="contentLayoutGuide" id="B09-sz-BtE"/>
                                <viewLayoutGuide key="frameLayoutGuide" id="lfW-lg-jNd"/>
                            </scrollView>
                            <textField hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" restorationIdentifier="TextToIgnoreTF" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Text to ignore" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="H3c-4r-fhC">
                                <rect key="frame" x="20" y="406.33333333333331" width="390" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="TextToIgnoreID">
                                    <accessibilityTraits key="traits" none="YES"/>
                                    <bool key="isElement" value="NO"/>
                                </accessibility>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="jGr-Q7-Sma"/>
                                </connections>
                            </textField>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="ViewID"/>
                        <constraints>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="AY8-Sc-jtx" secondAttribute="trailing" constant="20" id="064-zP-pBc"/>
                            <constraint firstItem="AY8-Sc-jtx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="0fh-Sa-4yZ"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="5HB-B2-Rg6" secondAttribute="trailing" constant="20" id="2pB-b2-pPM"/>
                            <constraint firstItem="NVJ-FX-9IQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="APu-H2-8lZ"/>
                            <constraint firstItem="YCY-AO-3Gi" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="CQ2-jZ-VSF"/>
...
